# goit_web_hw_02

./: .gitignore  Dockerfile  pyproject.toml
goit_web_hw_02_part2/: decorators.py  dockerfile  func.py  main.py  objects.py
venv_addressbook/: func.py  main.py  objects.py
venv_project/: pyproject.toml
venv_project/venv_addressbook/: decorators.py  func.py  main.py
