[project]
name = "venv-addressbook"
version = "0.1.0"
description = "Homework"
authors = [
    {name = "OleksandrM"}
]
requires-python = ">=3.12"
packages = [{include = 'venv_addressbook'}]
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.poetry.scripts]
addressbook = "venv_addressbook.main:main"

